# yeogida-backend

./: .flake8  .pre-commit-config.yaml  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  start.sh
carpools/: admin.py  api.py  apps.py  models.py  urls.py  views.py
carpools/migrations/: 0001_initial.py  0002_carpool_author_alter_carpool_seats_available.py  0002_initial.py  0003_carpool_likes.py  0004_carpoolcomment.py
courses/: admin.py  api.py  models.py  schemas.py
courses/migrations/: 0001_initial.py  0002_favoritecourse.py
rankings/: api.py
reviews/: admin.py  api.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0002_reviewcomment.py
users/: admin.py  api.py  models.py  schemas.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_region_uservisitedregion.py  0002_remove_customuser_email_alter_customuser_id.py  0003_alter_customuser_nickname.py  0004_customuser_badge_customuser_level_and_more.py  0004_customuser_email_customuser_level_customuser_name.py  0004_region_uservisitedregion.py
yeogida_backend/: asgi.py  settings.py  urls.py  wsgi.py
